--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<title>HOME</title>
+		<title>HOME:GEORGIANPHARMA</title>
 	        <link rel="stylesheet" href="assets/css/styles.css" />
 		<link href="assets/css/menu.css" rel="stylesheet" type="text/css" />
 		    <!-- Bootstrap -->
@@ -56,20 +56,6 @@ He has total 9 year experience of pharma marketing and 4 year experience as a ar
 	</div>
 	<!-- JavaScript includes -->
     <script src="assets/js/bootstrap.js"></script>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-<script>
-    
-    $(function() {
-     
-      $('img').each(function(n) {
-        n += 1;
-        $(this).wrap('<figure class="tint t'+ n + '"></figure>');
-      });
-
-    });
-
-  </script>
-
     </body>
 </html>
 
