--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<title>Vision</title>
+		<title>ABOUT:GEORGIANPHARMA</title>
 	        <link rel="stylesheet" href="../assets/css/styles.css" />
 		<link href="../assets/css/menu.css" rel="stylesheet" type="text/css" />
 		    <!-- Bootstrap -->
@@ -26,14 +26,14 @@
 		</header>        
 	</head>
 	<body class="impress-not-supported">
-
-	<p style="color:blue; font-size:30px; margin-top:3%">Georgian is the very famous word for health care sector , doctors of k.g.m.c  known as georgian becuase of it's name king george medical college.</p>
+	<p style="color:green; font-size:35px; margin-top:2%; margin-left:40%">ABOUT</p>
+	<p style="color:blue; font-size:30px; margin-top:0%">Georgian is the very famous word for health care sector , doctors of k.g.m.c  known as georgian becuase of it's name king george medical college.</p>
 	<p style="color:blue; font-size:30px; margin-top:3">They provoid their services   to the patient. they are known for the patient as god, as hope of life to cure the desease. georgian pharmaceuticals founded by syed baharul hasnain zaidi along with Mr. ahmad naved, Mr. sowmen santra and Miss Babita verma in 2014 for hope of life to cure desease by the dedication of all the four person georgian pharmaceuticals established.
 </p>
 
 
 	<div id="five">
-		<p style="color:blue; margin-left:20px; margin-top:12%;">&copy All copy rights reserved @ GEORGIAN PHARMACEUTICALS</p>
+		<p style="color:blue; margin-left:20px; margin-top:8%;">&copy All copy rights reserved @ GEORGIAN PHARMACEUTICALS</p>
 	</div>
 	<!-- JavaScript includes -->
     <script src="assets/js/bootstrap.js"></script>
