--- a/pages/product.html
+++ b/pages/product.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<title>Vision</title>
+		<title>PRODUCT:GEORGIANPHARMA</title>
 	        <link rel="stylesheet" href="../assets/css/styles.css" />
 		<link href="../assets/css/menu.css" rel="stylesheet" type="text/css" />
 		    <!-- Bootstrap -->
@@ -27,7 +27,7 @@
 	</head>
 	<body class="impress-not-supported">
 	<div id="product">
-	<p style="color:blue; font-size:40px; margin-top:2%; margin-left:35%">Our Products</p>
+	<p style="color:green; font-size:40px; margin-top:2%; margin-left:35%">Our Products</p>
 	<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">1.lycovita</p>
 <p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">lycopene,multivitamin,multimineral</p>
 <p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">2.codlee</p>
@@ -40,7 +40,7 @@
 <p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">isapgul husk</p>
 	</div>
 	<div id="five">
-		<p style="color:blue; margin-left:20px; margin-top:6%;">&copy All copy rights reserved @ GEORGIAN PHARMACEUTICALS</p>
+		<p style="color:blue; margin-left:20px; margin-top:4%;">&copy All copy rights reserved @ GEORGIAN PHARMACEUTICALS</p>
 	</div>
 	<!-- JavaScript includes -->
     <script src="assets/js/bootstrap.js"></script>
