--- a/pages/signin.html
+++ b/pages/signin.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<title>HOME</title>
+		<title>SIGN-IN:GEORGIANPHARMA</title>
 	        <link rel="stylesheet" href="../assets/css/styles.css" />
 		<link href="../assets/css/menu.css" rel="stylesheet" type="text/css" />
 		    <!-- Bootstrap -->
@@ -26,6 +26,16 @@
 		</header>        
 	</head>
 	<body>
+		<div style="text-align:center;margin-top:3%;margin-left:-10%;">
+			<div style="box-sizing: border-box; display: inline-block; width:auto; max-width: 480px; background-color: #FFFFFF; border: 2px solid #0361A8; border-radius: 5px; box-shadow: 0px 0px 8px #0361A8; margin:50px auto auto;">
+				<div style="background: #0361A8; border-radius: 5px 5px 0px 0px; padding: 15px;">
+					<span style="font-family: verdana,arial; color:#D4D4D4; font-size: 1.00em; font-weight:bold;">Enter your login and password</span>
+				</div>
+				<div style="background: ; padding: 15px">
 
+
+				</div>
+			</div>
+		</div>
 	</body>
 </html>	
