--- a/pages/vision.html
+++ b/pages/vision.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<title>Vision</title>
+		<title>VISION:GEORGIANPHARMA</title>
 	        <link rel="stylesheet" href="../assets/css/styles.css" />
 		<link href="../assets/css/menu.css" rel="stylesheet" type="text/css" />
 		    <!-- Bootstrap -->
@@ -26,8 +26,8 @@
 		</header>        
 	</head>
 	<body class="impress-not-supported">
-
-	<p style="color:blue; font-size:30px; margin-top:3%">Georgian pharmaceuticals gives  hope of life by quality medicine with economic price.
+	<p style="color:green; font-size:35px; margin-top:2%; margin-left:40%;">VISION</p>
+	<p style="color:blue; font-size:30px; margin-top:1%">Georgian pharmaceuticals gives  hope of life by quality medicine with economic price.
 </p>
 
 
