--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
 				<a class="metro-tile green button" style="cursor: pointer; width: 105px; height: 35px; display: inline; float:left; margin-top:10px; margin-bottom:10px;margin-left:500px;;border-radius: 1.8em;" href="pages/signin.html"><center style="margin-top:8px"><b style="color:white">Sign In ! </b></center></a>
 				<div id="lavalamp"></div>
 			</ul>
-		</header>        
+		</header>
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-51811503-1', 'georgianpharma.co.in');
+  			ga('send', 'pageview');
+		</script>        
 	</head>
 	<body class="impress-not-supported">
 	<div id="one">
