--- a/pages/signin.html
+++ b/pages/signin.html
@@ -24,6 +24,16 @@
 				<div id="lavalamp"></div>
 			</ul>
 		</header>        
+		<script>
+			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			  ga('create', 'UA-51811503-1', 'georgianpharma.co.in');
+			  ga('send', 'pageview');
+
+		</script>
 	</head>
 	<body>
 		<div style="text-align:center;margin-top:3%;margin-left:-10%;">
