--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<link href="assets/css/base.css" rel="stylesheet" media="screen">
 		<header>
 			<ul id="navv">
-				<li><h1><a href="index.html" style="background-color:transparent;">GEORGIAN PHARMACEUTICALS<p>Hope of Life</p></a></h1></li>
+				<li><h1><a style="background-color:transparent;">GEORGIAN PHARMACEUTICALS<p>Hope of Life</p></a></h1></li>
 				<div id="lavalampa"></div>
 			</ul>
 			<ul id="nav">
-				<li><h1 style="margin-left:-20px;"><a href="index.html" style="background-color:transparent;">WELCOME</a></h1></li>
+				<li><h1 style="margin-left:-20px;"><a style="background-color:transparent;">WELCOME</a></h1></li>
 				<li><a style="background-color:transparent;" href="index.html">HOME</a> </li>
 				<li><a href="pages/about.html" style="background-color:transparent;">About</a></li>
 				<li><a href="pages/product.html" style="background-color:transparent;">Product</a></li>
