--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ He has 3 year experience of pharma marketing as a medical representative.</p>
 He has 6 year experience of pharma marketing as a medical representative .</p>
 	</div>
 	<div id="three">
-			<img src="assets/img/3.jpg"  align="left">
+			<img src="assets/img/10.jpg"  alt="BABITA VERMA" align="left">
 			<p style="margin-left:280px; color:green; font-size:30px;"><b>BABITA VERMA</b></p>
 			<p style="color:black;font-size:18px;font-family:arial;">She is born on 19 march 1987 in jaunpur(u.p) India and completed her schooling from jaunpur after that she had completed her b.pharma from u.p.t.u (lucknow).
 She has 4 year experience of pharma marketing as a medical representative.</p>
@@ -61,7 +61,7 @@ She has 4 year experience of pharma marketing as a medical representative.</p>
 He has total 9 year experience of pharma marketing and 4 year experience as a area manager in pharmaceuticals sector.</p>
 	</div>
 	<div id="five">
-		<p style="color:blue; margin-left:20px; margin-top:10px;">&copy All copy rights reserved @ GEORGIAN PHARMACEUTICALS</p>
+		<p style="color:blue; margin-left:20px; margin-top:5%;">&copy All copy rights reserved @ GEORGIAN PHARMACEUTICALS</p>
 	</div>
 	<!-- JavaScript includes -->
     <script src="assets/js/bootstrap.js"></script>
