--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
 	</head>
 	<body class="impress-not-supported">
 	<div id="one">
-		<img src="assets/img/1.jpg"  align="left">
+		<img src="assets/img/1.jpg"  alt="SYED BAHARUL HASNAIN ZAIDI" align="left">
 		<p style="color:green; font-size:30px;"><b>SYED BAHARUL HASNAIN ZAIDI</b></p>
-		<p style="color:black;font-size:18px;font-family:arial">He is born on 1 july 1985 in bareilly(u.p) India and completed his schooling from bareilly after that he had completed his b.pharma from u.p.t.u (lucknow).
+		<p class="see" style="color:black;font-size:18px;font-family:arial">He is born on 1 july 1985 in bareilly(u.p) India and completed his schooling from bareilly after that he had completed his b.pharma from u.p.t.u (lucknow).
 He has 3 year experience of pharma marketing as a medical representative.</p>
 	</div>
 	<div id="two">
-			<img src="assets/img/2.jpg"  align="right">
+			<img src="assets/img/2.jpg"  alt="AHMAD NAVED" align="right">
 			<p style="margin-left:150px; color:green; font-size:30px;"><b>AHMAD NAVED</b></p>
-			<p style="color:black;font-size:18px;font-family:arial;">He is born on 27 june 1983 in gorakhpur(u.p) India and completed his schooling from gorakhpur after that he had completed his b.pharma from u.p.t.u (lucknow).
+			<p class="see" style="color:black;font-size:18px;font-family:arial;">He is born on 27 june 1983 in gorakhpur(u.p) India and completed his schooling from gorakhpur after that he had completed his b.pharma from u.p.t.u (lucknow).
 He has 6 year experience of pharma marketing as a medical representative .</p>
 	</div>
 	<div id="three">
 			<img src="assets/img/10.jpg"  alt="BABITA VERMA" align="left">
 			<p style="margin-left:280px; color:green; font-size:30px;"><b>BABITA VERMA</b></p>
-			<p style="color:black;font-size:18px;font-family:arial;">She is born on 19 march 1987 in jaunpur(u.p) India and completed her schooling from jaunpur after that she had completed her b.pharma from u.p.t.u (lucknow).
+			<p class="see" style="color:black;font-size:18px;font-family:arial;">She is born on 19 march 1987 in jaunpur(u.p) India and completed her schooling from jaunpur after that she had completed her b.pharma from u.p.t.u (lucknow).
 She has 4 year experience of pharma marketing as a medical representative.</p>
 		
 	</div>
 	<div id="four">
-			<img src="assets/img/4.JPG"  align="right">
+			<img src="assets/img/4.JPG" alt="SOWMEN SANTRA" align="right">
 			<p style="margin-left:150px; color:green; font-size:30px;"><b>SOWMEN SANTRA</b></p>
-			<p style="color:black;font-size:18px;font-family:arial;">He is born on 1 july 1983 in lucknow(u.p) India and completed his schooling from lucknow after that he had completed his MBA from lucknow university (lucknow).
+			<p class="see" style="color:black;font-size:18px;font-family:arial;">He is born on 1 july 1983 in lucknow(u.p) India and completed his schooling from lucknow after that he had completed his MBA from lucknow university (lucknow).
 He has total 9 year experience of pharma marketing and 4 year experience as a area manager in pharmaceuticals sector.</p>
 	</div>
 	<div id="five">
