--- a/pages/product.html
+++ b/pages/product.html
@@ -38,7 +38,8 @@
 	<body class="impress-not-supported">
 	<div id="product">
 	<p style="color:green; font-size:40px; margin-top:2%; margin-left:35%">Our Products</p>
-	<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">1.lycovita</p>
+	<p style="color:blue; font-size:100px; margin-top:10%; margin-left:20%">COMMING SOON</p>
+<!--	<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">1.lycovita</p>
 <p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">lycopene,multivitamin,multimineral</p>
 <p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">2.codlee</p>
 <p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">cod liver oil and vitamine -E</p>
@@ -48,9 +49,9 @@
 <p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">paracetamol,aceclofenac,seretopeptide</p>
 <p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">5.husbol</p>
 <p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">isapgul husk</p>
-	</div>
+-->	</div>
 	<div id="five">
-		<p style="color:blue; margin-left:20px; margin-top:8%;">&copy All copy rights reserved @ GEORGIAN PHARMACEUTICALS</p>
+		<p style="color:blue; margin-top:12%; margin-left:2%">&copy All copy rights reserved @ GEORGIAN PHARMACEUTICALS</p>
 	</div>
 	<!-- JavaScript includes -->
     <script src="assets/js/bootstrap.js"></script>
