--- a/main/about.html
+++ b/main/about.html
@@ -19,6 +19,25 @@
       		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     		<![endif]-->
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-51811503-1', 'georgianpharma.co.in');
+  			ga('send', 'pageview');
+		</script>
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-51784331-1', 'georgianpharma.co.in');
+  			ga('send', 'pageview');
+
+		</script>
 	</head>
 	<body>
         	<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
@@ -53,7 +72,7 @@
 		<div id="hole">
 			<div class="about">
 				<p style="color:green; font-size:3vw; margin-top:2%; text-align:center"><b>ABOUT</b></p>
-				<p>Georgian is the very famous word for health care sector , doctors of k.g.m.c  known as georgian becuase of it's name king george medical college.<br>They provoid their services   to the patient. they are known for the patient as god, as hope of life to cure the desease. georgian pharmaceuticals founded by syed baharul hasnain zaidi along with Mr. ahmad naved, Mr. sowmen santra and Miss Babita verma in 2014 for hope of life to cure desease by the dedication of all the four person georgian pharmaceuticals established.
+				<p>Georgian is the very famous word for health care sector , doctors of k.g.m.c  known as georgian becuase of it's name king george medical college.<br>They provoide their services to the patient. they are known for the patient as god, as hope of life to cure the desease. georgian pharmaceuticals founded by syed baharul hasnain zaidi along with Mr. ahmad naved, Mr. sowmen santra and Miss Babita verma in 2014 for hope of life to cure desease by the dedication of all the four person georgian pharmaceuticals established.
 </p>
 			</div>
 		</div>
