--- a/main/feedback.html
+++ b/main/feedback.html
@@ -19,6 +19,25 @@
       		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     		<![endif]-->
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-51811503-1', 'georgianpharma.co.in');
+  			ga('send', 'pageview');
+		</script>
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-51784331-1', 'georgianpharma.co.in');
+  			ga('send', 'pageview');
+
+		</script>
 	</head>
 	<body>
         	<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
@@ -59,15 +78,15 @@
 			</div>
 			<div class="fede">
 				<p style="font-size:1.5vw">Your FEEDBACK is important for us.
-				<br>So please give your feedback and help us.</p>
+				<br>So please give your feedback.</p>
 				<form action="index.php" method="POST">
-				<b>Your name</b>: <br>
+				<b>Name</b>: <br>
 				<input type="text" name="realname"><br>
 				<br><b>
-				Your email</b>: <br>
+				Email</b>: <br>
 				<input type="text" name="email"><br>
 				<br>
-				<b>Your comments</b>: <br>
+				<b>Comments</b>: <br>
 				<textarea name="comments"></textarea><br><br>
 				<input type="submit" value="Submit">
 				</form>
