--- a/main/product.html
+++ b/main/product.html
@@ -19,6 +19,25 @@
       		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     		<![endif]-->
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-51811503-1', 'georgianpharma.co.in');
+  			ga('send', 'pageview');
+		</script>
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-51784331-1', 'georgianpharma.co.in');
+  			ga('send', 'pageview');
+
+		</script>
 	</head>
 	<body>
         	<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
@@ -53,7 +72,7 @@
 		<div id="hole">
 			<div class="go">
 				<p style="color:green; font-size:3vw; margin-top:2%; text-align:center;"><b>OUR PRODUCT</b></p>
-					<p class="product"><b>COMMING SOON</b></p>
+					<p class="product"><b>COMING SOON</b></p>
 <!--	<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">1.lycovita</p>
 <p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">lycopene,multivitamin,multimineral</p>
 <p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">2.codlee</p>
