--- a/main/feedback.html
+++ b/main/feedback.html
@@ -79,7 +79,7 @@
 			<div class="fede">
 				<p style="font-size:1.5vw">Your FEEDBACK is important for us.
 				<br>So please give your feedback.</p>
-				<form action="index.php" method="POST">
+				<form action="../index.html" method="POST">
 				<b>Name</b>: <br>
 				<input type="text" name="realname"><br>
 				<br><b>
