--- a/main/signin.html
+++ b/main/signin.html
@@ -7,7 +7,7 @@
     		<meta name="description" content="">
     		<meta name="author" content="">
     		<link rel="icon" href="../fonts/favicon.ico">
-		<title>FEEDBACK:GEORGIANPHARMA</title>
+		<title>SIGN-IN:GEORGIANPHARMA</title>
 	        <link rel="stylesheet" href="../css/bootstrap.css" />
     		<link href="../css/offcanvas.css" rel="stylesheet">
 		<link href="../css/my.css" rel="stylesheet">
@@ -19,6 +19,25 @@
       		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     		<![endif]-->
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-51811503-1', 'georgianpharma.co.in');
+  			ga('send', 'pageview');
+		</script>
+		<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-51784331-1', 'georgianpharma.co.in');
+  			ga('send', 'pageview');
+
+		</script>
 	</head>
 	<body>
         	<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
@@ -40,39 +59,31 @@
                                 <div class="collapse navbar-collapse">
 	                                        <ul id="nav">
                                                         <li><a href="../index.html">Home</a></li>
-                                                        <li ><a href="about.html">About</a></li>
-                                                        <li><a href="product.html">Product</a></li>
+                                                        <li><a href="about.html">About</a></li>
+                                                        <li ><a href="product.html">Product</a></li>
                                                         <li><a href="vision.html">Vision</a></li>
-                                                        <li class="active"><a href="feedback.html">feedback</a></li>
-                                                        <li><a href="signin.html">Sign In ! </a></li>
+                                                        <li><a href="feedback.html">feedback</a></li>
+                                                        <li class="active"><a href="signin.html">Sign In ! </a></li>
                                                         <div id="lavalamp"></div>
                                                 </ul>
                                  </div><!-- /.nav-collapse -->
                         </div><!-- /.container -->
                 </div><!-- /.navbar --><!--top line end/////////////////////////////////////////-->
 		<div id="hole">
-			<div class="feed">
-				<p><b>FEEDBACK</b></p>
+			<div class="go">
+					<p class="product"><b>COMING SOON</b></p>
+<!--	<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">1.lycovita</p>
+<p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">lycopene,multivitamin,multimineral</p>
+<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">2.codlee</p>
+<p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">cod liver oil and vitamine -E</p>
+<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">3.pentagen-DSR</p>
+<p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">pentaprazole and domperidom</p>
+<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">4.Para-AS</p>
+<p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">paracetamol,aceclofenac,seretopeptide</p>
+<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">5.husbol</p>
+<p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">isapgul husk</p>
+-->
 			</div>
-			<div class="feede">
-				<p><b>FEEDBACK</b></p>
-			</div>
-			<div class="fede">
-				<p style="font-size:1.5vw">Your FEEDBACK is important for us.
-				<br>So please give your feedback and help us.</p>
-				<form action="feedbackfunction" method="POST">
-				<b>Your name</b>: <br>
-				<input type="text" name="realname"><br>
-				<br><b>
-				Your email</b>: <br>
-				<input type="text" name="email"><br>
-				<br>
-				<b>Your comments</b>: <br>
-				<textarea name="comments"></textarea><br><br>
-				<input type="submit" value="Submit">
-				</form>
-			</div>
-
 		</div>
 		<div id="five">
 			&copy2014 All copy rights reserved @ GEORGIAN PHARMACEUTICALS
