--- a/main/signin.html
+++ b/main/signin.html
@@ -70,19 +70,39 @@
                         </div><!-- /.container -->
                 </div><!-- /.navbar --><!--top line end/////////////////////////////////////////-->
 		<div id="hole">
-			<div class="go">
-					<p class="product"><b>COMING SOON</b></p>
-<!--	<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">1.lycovita</p>
-<p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">lycopene,multivitamin,multimineral</p>
-<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">2.codlee</p>
-<p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">cod liver oil and vitamine -E</p>
-<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">3.pentagen-DSR</p>
-<p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">pentaprazole and domperidom</p>
-<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">4.Para-AS</p>
-<p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">paracetamol,aceclofenac,seretopeptide</p>
-<p style="color:orange; font-size:35px; margin-top:0%; margin-left:10%">5.husbol</p>
-<p style="color:blue; font-size:30px; margin-top:-20px; margin-left:25%">isapgul husk</p>
--->
+			<div class="sign" style="text-align: center;">
+			<div style="box-sizing: border-box; display: inline-block; width:auto; max-width: 480px; background-color: #FFFFFF; border: 1vw solid #0361A8; border-radius: 1vw; box-shadow: 0px 0px 1vw #0361A8; margin: vw auto auto;">
+<div style="background: #0361A8; border-radius: 1vw 1vw 0px 0px; padding:0.5 vw;"><span style="font-family: verdana,arial; color: #D4D4D4; font-weight:bold;font-size:2vw">Sign-in</span></div>
+<div style="background: ; padding: 2vw">
+<style type="text/css" scoped>
+	td { text-align:left; font-family: verdana,arial; color: #064073; 
+font-size: 1.00em; }
+	input { border: 1px solid #CCCCCC; border-radius: 5px; color: #666666; 
+display: inline-block; font-size: 1.00em;  padding: 5px; width: 100%; }
+	input[type="button"], input[type="reset"], input[type="submit"] { 
+height: auto; width: auto; cursor: pointer; box-shadow: 0px 0px 5px 
+#0361A8; float: right; margin-top: 10px; }
+	table.center { margin-left:auto; margin-right:auto; }
+	.error { font-family: verdana,arial; color: #D41313; font-size: 1.00em;
+ }
+	</style>
+<form method="post" action="../index.html" 
+name="aform" target="_top">
+<input type="hidden" name="action" value="login">
+<input type="hidden" name="hide" value="">
+<table class='center'>
+<tr><td>Username:</td><td><input 
+type="text" name="login"></td></tr>
+<tr><td>Password:</td><td><input 
+type="password" name="password"></td></tr>
+<tr><td>&nbsp;</td><td><input 
+type="submit" value="Submit"></td></tr>
+<tr><td colspan=2>&nbsp;</td></tr>
+</table>
+</form>
+
+			</div>
+			</div>
 			</div>
 		</div>
 		<div id="five">
