--- a/index.html
+++ b/index.html
@@ -1,128 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-    		<meta name="description" content="">
-    		<meta name="author" content="">
-    		<link rel="icon" href="fonts/favicon.ico">
-		<title>HOME:GEORGIANPHARMA</title>
-	        <link rel="stylesheet" href="css/bootstrap.css" />
-    		<link href="css/offcanvas.css" rel="stylesheet">
-		<link href="css/my.css" rel="stylesheet">
-    		<!-- Just for debugging purposes. Don't actually copy this line! -->
-    		<!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
-	
-		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    		<!--[if lt IE 9]>
-      		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    		<![endif]-->
-		<script>
-  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="fonts/favicon.ico">
 
-  			ga('create', 'UA-51811503-1', 'georgianpharma.co.in');
-  			ga('send', 'pageview');
-		</script>
-		<script>
-  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <title>HOME:GEORGIAN</title>
 
-  			ga('create', 'UA-51784331-1', 'georgianpharma.co.in');
-  			ga('send', 'pageview');
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
 
-		</script>
-	</head>
-	<body>
-        	<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-                	<div class="container">
-				<div>
-					<ul id="navv">
-                                		<li><h1><a style="margin-top:1px;">GEORGIAN PHARMACEUTICALS<p>Hope of Life</p><a></h1></li>
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-                        		</ul>	
-				</div>
-                                <div class="navbar-header">
-                                	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                        	<span class="sr-only">Menu</span>
-                                                	<span class="icon-bar"></span>
-                                                        <span class="icon-bar"></span>
-                                                        <span class="icon-bar"></span>
-                                        </button>
-                                </div>
-                                <div class="collapse navbar-collapse">
-	                                        <ul id="nav">
-                                                        <li class="active"><a href="index.html">Home</a></li>
-                                                        <li><a href="main/about.html">About</a></li>
-                                                        <li><a href="main/product.html">Product</a></li>
-                                                        <li><a href="main/vision.html">Vision</a></li>
-                                                        <li><a href="main/feedback.html">feedback</a></li>
-                                                        <li><a href="main/signin.html">Sign In ! </a></li>
-                                                        <div id="lavalamp"></div>
-                                                </ul>
-                                 </div><!-- /.nav-collapse -->
-                        </div><!-- /.container -->
-                </div><!-- /.navbar --><!--top line end/////////////////////////////////////////-->
-		<div id="hole">
-			<div id="left">
-				<div id="one">
-					<div class="background1">
-					<b>SYED BAHARUL HASNAIN ZAIDI</b>	
-					</div>
-					<div class="onetext">
-						<p style="text-align:center;font-size:2.1vw;color:green"><b>SYED BAHARUL HASNAIN ZAIDI</b></p>
-                				<p>He is born on 1 july 1985 in bareilly(u.p) India and completed his schooling from bareilly after that he had completed his b.pharma from u.p.t.u (lucknow).
-He has 3 year experience of pharma marketing as a medical representative.</p>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-					</div>
-				</div>
-				<div id="three">
-					<div class="background3">
-					<b>BABITA VERMA</b>	
-					</div>
-					<div class="threetext">
-						<p style="text-align:center;font-size:2.1vw;color:green"><b>BABITA VERMA</b></p>
-                        			<p>She is born on 19 march 1987 in jaunpur(u.p) India and completed her schooling from jaunpur after that she had completed her b.pharma from u.p.t.u (lucknow).
-She has 4 year experience of pharma marketing as a medical representative.</p>
-					</div>
-				</div>
-			</div>
-			<div id="right">
-				<div id="two">
-					<div class="background2">
-					<b>AHMAD NAVED</b>	
-					</div>
-					<div class="twotext">
-						 <p style="text-align:center;font-size:2.1vw;color:green"><b>AHMAD NAVED</b></p>
-                        			 <p>He is born on 27 june 1983 in gorakhpur(u.p) India and completed his schooling from gorakhpur after that he had completed his b.pharma from u.p.t.u (lucknow).
-He has 6 year experience of pharma marketing as a medical representative .</p>
-					</div>
-				</div>
-				<div id="four">
-					<div class="background4">
-					<b>SOWMEN SANTRA</b>	
-					</div>
-					<div class="fourtext">
-						<p style="text-align:center;font-size:2.1vw;color:green"><b>SOWMEN SANTRA</b></p>
-                        			<p>He is born on 1 july 1983 in lucknow(u.p) India and completed his schooling from lucknow after that he had completed his MBA from lucknow university (lucknow).
-He has total 9 year experience of pharma marketing and 4 year experience as a area manager in pharmaceuticals sector.</p>
+    <!-- Custom styles for this template -->
+    <link href="css/carousel.css" rel="stylesheet">
+  </head>
+<!-- NAVBAR
+================================================== -->
+  <body>
+    <div class="navbar-wrapper">
+      <div class="container">
+        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Menu</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="index.html"><p class="name">GEORGIAN</p><p class="namea">PHARMACEUTICALS<p><p class="nameb">Hope Of Life</p></a>
+            </div>
+            <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li class="dropdown">
+                  <a href="index.html" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="main/about.html">About us</a></li>
+		    <li><a href="main/vision.html">Our vision</a></li>
+                    <li><a href="main/bhzaidi.html">B.H.Zaidi</a></li>
+                    <li><a href="main/anaved.html">A.Naved</a></li>
+		    <li><a href="main/bverma.html">B.Verma</a></li>
+		    <li><a href="main/ssantra.html">S.Santra</a></li>
+                  </ul>
+                </li>
+		<li class="dropdown">
+                  <a href="index.html" class="dropdown-toggle" data-toggle="dropdown">Product<b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="main/1.html">1.Lycovita</a></li>
+		    <li><a href="main/2.html">2.Codlee</a></li>
+                    <li><a href="main/3.html">3.Pentagen-DSR</a></li>
+                    <li><a href="main/4.html">4.Para-AS</a></li>
+		    <li><a href="main/5.html">5.Husbol</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-					</div>
-				</div>
-			</div>
-		</div>
-		<div id="five">
-			&copy2014 All copy rights reserved @ GEORGIAN PHARMACEUTICALS
-		</div>
-		<!-- JavaScript includes -->
-		<script src="js/jquery-1.7.1.min.js"></script>
-		<script src="js/bootstrap.js"></script>
-		<script src="js/offcanvas.js"></script>
-	</body>
-</html> 
+
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+	<li data-target="#myCarousel" data-slide-to="3"></li>
+	<li data-target="#myCarousel" data-slide-to="4"></li>
+	<li data-target="#myCarousel" data-slide-to="5"></li>
+	<li data-target="#myCarousel" data-slide-to="6"></li>
+	<li data-target="#myCarousel" data-slide-to="7"></li>
+	<li data-target="#myCarousel" data-slide-to="8"></li>
+	<li data-target="#myCarousel" data-slide-to="9"></li>
+	<li data-target="#myCarousel" data-slide-to="10"></li>
+	<li data-target="#myCarousel" data-slide-to="11"></li>
+	<li data-target="#myCarousel" data-slide-to="12"></li>
+	<li data-target="#myCarousel" data-slide-to="13"></li>
+	<li data-target="#myCarousel" data-slide-to="14"></li>
+	<li data-target="#myCarousel" data-slide-to="15"></li>
+	<li data-target="#myCarousel" data-slide-to="16"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="fonts/5.jpg" alt="1">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/8.jpg" alt="2">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/9.jpg" alt="3">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/11.jpg" alt="4">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/12.jpg" alt="5">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/13.jpg" alt="6">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/14.jpg" alt="7">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/15.jpg" alt="8">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/16.jpg" alt="9">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/17.jpg" alt="10">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/18.jpg" alt="11">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/19.jpg" alt="12">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/20.png" alt="13">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/21.gif" alt="14">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+       <div class="item">
+          <img src="fonts/23.jpg" alt="16">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/24.jpg" alt="17">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="fonts/25.jpg" alt="18">
+          <div class="container">
+            <div class="carousel-caption">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!-- /.carousel -->
+
+
+
+
+
+
+
+
+
+
+<div class="container marketing">
+
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <a href="main/feedback.html"><img class="img-circle" src="fonts/26.jpg" alt="feedback" style="width: 140px; height: 140px;"></a>
+          <h2>Feedback</h2>
+          <p>Your FEEDBACK is important for us. So please give your feedback and help us.</p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <a href="main/customer.html"><img class="img-circle" src="fonts/18.jpg" alt="Customer" style="width: 140px; height: 140px;"></a>
+          <h2>Customer</h2>
+          <p>We do everything for you. Give us a chance, we give you a life.</p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <a href="main/employee.html"><img class="img-circle" src="fonts/19.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;"></a>
+          <h2>Employee</h2>
+          <p>We are here because you are here.</p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+
+      
+
+
+
+
+
+   <footer>
+        <p>&copy; 2014 Company,Georgianpharma. &middot;</p>
+   </footer>
+   </div>
+   <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/docs.min.js"></script>
+  </body>
+</html>
+
