--- a/main/bverma.html
+++ b/main/bverma.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../fonts/favicon.ico">
 
-    <title>Feedback:GEORGIAN</title>
+    <title>B.Verma:GEORGIAN</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.css" rel="stylesheet">
@@ -45,18 +45,18 @@
               <ul class="nav navbar-nav">
                 <li><a href="../index.html">Home</a></li>
                 <li class="dropdown">
-                  <a href="feedback.html" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
+                  <a href="bverma.html" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="about.html">About us</a></li>
 		    <li><a href="vision.html">Our vision</a></li>
                     <li><a href="bhzaidi.html">B.H.Zaidi</a></li>
                     <li><a href="anaved.html">A.Naved</a></li>
-		    <li><a href="bverma.html">B.Verma</a></li>
+		    <li class="active"><a href="bverma.html">B.Verma</a></li>
 		    <li><a href="ssantra.html">S.Santra</a></li>
                   </ul>
                 </li>
 		<li class="dropdown">
-                  <a href="feedback.html" class="dropdown-toggle" data-toggle="dropdown">Product<b class="caret"></b></a>
+                  <a href="bverma.html" class="dropdown-toggle" data-toggle="dropdown">Product<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="1.html">1.Lycovita</a></li>
 		    <li><a href="2.html">2.Codlee</a></li>
@@ -73,30 +73,31 @@
     </div>
 
 
-<div id="hole">
-			<div class="feed">
-				<p><b>FEEDBACK</b></p>
-			</div>
-			<div class="feede">
-				<p><b>FEEDBACK</b></p>
-			</div>
-			<div class="fede">
-				<p style="font-size:1.5vw">Your FEEDBACK is important for us.
-				<br>So please give your feedback and help us.</p>
-				<form action="../index.html" method="POST">
-				<b>Your name</b>: <br>
-				<input type="text" name="realname"><br>
-				<br><b>
-				Your email</b>: <br>
-				<input type="text" name="email"><br>
-				<br>
-				<b>Your comments</b>: <br>
-				<textarea name="comments"></textarea><br><br>
-				<input type="submit" value="Submit">
-				</form>
-			</div>
-
+    <!-- Carousel
+    ================================================== -->
+    <div class="bh">
+<div class="bhp"><img src="../fonts/3.jpg"  alt="B.Verma" align="left"><p class="main">BABITA VERMA</p><p>She is born on 19 march 1987 in jaunpur(u.p) India and completed her schooling from jaunpur after that she had completed her b.pharma from u.p.t.u (lucknow). She has 4 year experience of pharma marketing as a medical representative.
+</p></div>
+    </div><!-- /.carousel -->
+<div class="container marketing">
       <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <a href="feedback.html"><img class="img-circle" src="../fonts/26.jpg" alt="feedback" style="width: 140px; height: 140px;"></a>
+          <h2>Feedback</h2>
+          <p>Your FEEDBACK is important for us. So please give your feedback and help us.</p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <a href="customer.html"><img class="img-circle" src="../fonts/18.jpg" alt="Customer" style="width: 140px; height: 140px;"></a>
+          <h2>Customer</h2>
+          <p>We do everything for you. Give us a chance, we give you a life.</p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <a href="employee.html"><img class="img-circle" src="../fonts/19.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;"></a>
+          <h2>Employee</h2>
+          <p>We are here because you are here.</p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
    <footer>
         <p>&copy; 2014 Company,Georgianpharma. &middot;</p>
    </footer>
