--- a/main/customer.html
+++ b/main/customer.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../fonts/favicon.ico">
 
-    <title>Feedback:GEORGIAN</title>
+    <title>Customer:GEORGIAN</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.css" rel="stylesheet">
@@ -45,7 +45,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="../index.html">Home</a></li>
                 <li class="dropdown">
-                  <a href="feedback.html" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
+                  <a href="customer.html" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="about.html">About us</a></li>
 		    <li><a href="vision.html">Our vision</a></li>
@@ -56,7 +56,7 @@
                   </ul>
                 </li>
 		<li class="dropdown">
-                  <a href="feedback.html" class="dropdown-toggle" data-toggle="dropdown">Product<b class="caret"></b></a>
+                  <a href="customer.html" class="dropdown-toggle" data-toggle="dropdown">Product<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="1.html">1.Lycovita</a></li>
 		    <li><a href="2.html">2.Codlee</a></li>
@@ -74,27 +74,40 @@
 
 
 <div id="hole">
-			<div class="feed">
-				<p><b>FEEDBACK</b></p>
+	<div style="text-align: center; margin-top:140px;">
+		<div style="box-sizing: border-box; display: inline-block; width:auto; max-width: 480px; background-color: #FFFFFF; border: 1vw solid #0361A8; border-radius: 1vw; box-shadow: 0px 0px 1vw #0361A8; margin: vw auto auto;">
+			<div style="background: #0361A8; border-radius: 1vw 1vw 0px 0px; padding:0.5 vw;"><span style="font-family: verdana,arial; color: #D4D4D4; font-weight:bold;font-size:2vw">Sign-in</span>
 			</div>
-			<div class="feede">
-				<p><b>FEEDBACK</b></p>
-			</div>
-			<div class="fede">
-				<p style="font-size:1.5vw">Your FEEDBACK is important for us.
-				<br>So please give your feedback and help us.</p>
-				<form action="../index.html" method="POST">
-				<b>Your name</b>: <br>
-				<input type="text" name="realname"><br>
-				<br><b>
-				Your email</b>: <br>
-				<input type="text" name="email"><br>
-				<br>
-				<b>Your comments</b>: <br>
-				<textarea name="comments"></textarea><br><br>
-				<input type="submit" value="Submit">
+			<div style="background: ; padding: 2vw"><style type="text/css" scoped>
+				td { text-align:left; font-family: verdana,arial; color: #064073; 
+font-size: 1.00em; }
+				input { border: 1px solid #CCCCCC; border-radius: 5px; color: #666666; 
+display: inline-block; font-size: 1.00em;  padding: 5px; width: 100%; }
+				input[type="button"], input[type="reset"], input[type="submit"] { 
+height: auto; width: auto; cursor: pointer; box-shadow: 0px 0px 5px 
+#0361A8; float: right; margin-top: 10px; }
+				table.center { margin-left:auto; margin-right:auto; }
+				.error { font-family: verdana,arial; color: #D41313; font-size: 1.00em;
+ }
+				</style>
+				<form method="post" action="../index.html" 
+name="aform" target="_top">
+				<input type="hidden" name="action" value="login">
+				<input type="hidden" name="hide" value="">
+				<table>
+				<tr><td>Customer id:</td><td><input 
+type="text" name="login"></td></tr>
+				<tr><td>Password:</td><td><input 
+type="password" name="password"></td></tr>
+				<tr><td>&nbsp;</td><td><input 
+type="submit" value="Submit"></td></tr>
+				<tr><td colspan=2>&nbsp;</td></tr>
+				</table>
 				</form>
 			</div>
+		</div>
+	</div>
+</div>
 
       <!-- Three columns of text below the carousel -->
    <footer>
