--- a/main/vision.html
+++ b/main/vision.html
@@ -1,87 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-    		<meta name="description" content="">
-    		<meta name="author" content="">
-    		<link rel="icon" href="../fonts/favicon.ico">
-		<title>VISION:GEORGIANPHARMA</title>
-	        <link rel="stylesheet" href="../css/bootstrap.css" />
-    		<link href="../css/offcanvas.css" rel="stylesheet">
-		<link href="../css/my.css" rel="stylesheet">
-    		<!-- Just for debugging purposes. Don't actually copy this line! -->
-    		<!--[if lt IE 9]><script src="../js/ie8-responsive-file-warning.js"></script><![endif]-->
-	
-		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    		<!--[if lt IE 9]>
-      		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    		<![endif]-->
-		<script>
-  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../fonts/favicon.ico">
 
-  			ga('create', 'UA-51811503-1', 'georgianpharma.co.in');
-  			ga('send', 'pageview');
-		</script>
-		<script>
-  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <title>VISION:GEORGIAN</title>
 
-  			ga('create', 'UA-51784331-1', 'georgianpharma.co.in');
-  			ga('send', 'pageview');
+    <!-- Bootstrap core CSS -->
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
-		</script>
-	</head>
-	<body>
-        	<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-                	<div class="container">
-				<div>
-					<ul id="navv">
-                                		<li><h1><a style="margin-top:1px;">GEORGIAN PHARMACEUTICALS<p>Hope of Life</p><a></h1></li>
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-                        		</ul>	
-				</div>
-                                <div class="navbar-header">
-                                	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                        	<span class="sr-only">Menu</span>
-                                                	<span class="icon-bar"></span>
-                                                        <span class="icon-bar"></span>
-                                                        <span class="icon-bar"></span>
-                                        </button>
-                                </div>
-                                <div class="collapse navbar-collapse">
-	                                        <ul id="nav">
-                                                        <li><a href="../index.html">Home</a></li>
-                                                        <li ><a href="about.html">About</a></li>
-                                                        <li><a href="product.html">Product</a></li>
-                                                        <li class="active"><a href="vision.html">Vision</a></li>
-                                                        <li><a href="feedback.html">feedback</a></li>
-                                                        <li><a href="signin.html">Sign In ! </a></li>
-                                                        <div id="lavalamp"></div>
-                                                </ul>
-                                 </div><!-- /.nav-collapse -->
-                        </div><!-- /.container -->
-                </div><!-- /.navbar --><!--top line end/////////////////////////////////////////-->
-		<div id="hole">
-			<div class="about">
-				<p style="color:green; font-size:4vw; margin-top:2%; text-align:center"><b>VISION</b></p>
-					<p>Georgian pharmaceuticals gives  hope of life by quality medicine with economic price.
-</p>
-			</div>
-		</div>
-		<div id="five">
-			&copy2014 All copy rights reserved @ GEORGIAN PHARMACEUTICALS
-		</div>
-		<!-- JavaScript includes -->
-		<script src="../js/jquery-1.7.1.min.js"></script>
-		<script src="../js/bootstrap.js"></script>
-		<script src="../js/offcanvas.js"></script>
-	</body>
-</html> 
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <!-- Custom styles for this template -->
+    <link href="../css/carousel.css" rel="stylesheet">
+  </head>
+<!-- NAVBAR
+================================================== -->
+  <body>
+    <div class="navbar-wrapper">
+      <div class="container">
+        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Menu</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="../index.html"><p class="name">GEORGIAN</p><p class="namea">PHARMACEUTICALS<p><p class="nameb">Hope Of Life</p></a>
+            </div>
+            <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li><a href="../index.html">Home</a></li>
+                <li class="dropdown">
+                  <a href="vision.html" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="about.html">About us</a></li>
+		    <li class="active"><a href="vision.html">Our vision</a></li>
+                    <li><a href="bhzaidi.html">B.H.Zaidi</a></li>
+                    <li><a href="anaved.html">A.Naved</a></li>
+		    <li><a href="bverma.html">B.Verma</a></li>
+		    <li><a href="ssantra.html">S.Santra</a></li>
+                  </ul>
+                </li>
+		<li class="dropdown">
+                  <a href="vision.html" class="dropdown-toggle" data-toggle="dropdown">Product<b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="1.html">1.Lycovita</a></li>
+		    <li><a href="2.html">2.Codlee</a></li>
+                    <li><a href="3.html">3.Pentagen-DSR</a></li>
+                    <li><a href="4.html">4.Para-AS</a></li>
+		    <li><a href="5.html">5.Husbol</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Carousel
+    ================================================== -->
+    <div class="vision">
+<div class="visionp"><p class="main">OUR VISION</p><p>Georgian pharmaceuticals gives hope of life by quality medicine with economic price.
+</p></div>
+    </div><!-- /.carousel -->
+<div class="container marketing">
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <a href="feedback.html"><img class="img-circle" src="../fonts/26.jpg" alt="feedback" style="width: 140px; height: 140px;"></a>
+          <h2>Feedback</h2>
+          <p>Your FEEDBACK is important for us. So please give your feedback and help us.</p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <a href="customer.html"><img class="img-circle" src="../fonts/18.jpg" alt="Customer" style="width: 140px; height: 140px;"></a>
+          <h2>Customer</h2>
+          <p>We do everything for you. Give us a chance, we give you a life.</p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <a href="employee.html"><img class="img-circle" src="../fonts/19.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;"></a>
+          <h2>Employee</h2>
+          <p>We are here because you are here.</p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+   <footer>
+        <p>&copy; 2014 Company,Georgianpharma. &middot;</p>
+   </footer>
+   </div>
+   <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/docs.min.js"></script>
+  </body>
+</html>
+
