--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
                   <a href="index.html" class="dropdown-toggle" data-toggle="dropdown">Product<b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><a href="main/1.html">1.Lycovita</a></li>
-		    <li><a href="main/2.html">2.Codlee</a></li>
+		    <li><a href="main/2.html">2.Coddlee</a></li>
                     <li><a href="main/3.html">3.Pentagen-DSR</a></li>
                     <li><a href="main/4.html">4.Para-AS</a></li>
-		    <li><a href="main/5.html">5.Husbol</a></li>
+		    <li><a href="main/5.html">5.Isabowl</a></li>
+		    <li><a href="main/6.html">6.G-calci</a></li>
                   </ul>
                 </li>
               </ul>
@@ -92,9 +93,6 @@
 	<li data-target="#myCarousel" data-slide-to="11"></li>
 	<li data-target="#myCarousel" data-slide-to="12"></li>
 	<li data-target="#myCarousel" data-slide-to="13"></li>
-	<li data-target="#myCarousel" data-slide-to="14"></li>
-	<li data-target="#myCarousel" data-slide-to="15"></li>
-	<li data-target="#myCarousel" data-slide-to="16"></li>
       </ol>
       <div class="carousel-inner">
         <div class="item active">
@@ -106,13 +104,6 @@
         </div>
         <div class="item">
           <img src="fonts/8.jpg" alt="2">
-          <div class="container">
-            <div class="carousel-caption">
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="fonts/9.jpg" alt="3">
           <div class="container">
             <div class="carousel-caption">
             </div>
@@ -153,20 +144,7 @@
             </div>
           </div>
         </div>
-        <div class="item">
-          <img src="fonts/16.jpg" alt="9">
-          <div class="container">
-            <div class="carousel-caption">
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="fonts/17.jpg" alt="10">
-          <div class="container">
-            <div class="carousel-caption">
-            </div>
-          </div>
-        </div>
+        
         <div class="item">
           <img src="fonts/18.jpg" alt="11">
           <div class="container">
