--- a/main/5.html
+++ b/main/5.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../fonts/favicon.ico">
 
-    <title>Husbol:GEORGIAN</title>
+    <title>ISABOWL:GEORGIAN</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.css" rel="stylesheet">
@@ -62,7 +62,8 @@
 		    <li><a href="2.html">2.Codlee</a></li>
                     <li><a href="3.html">3.Pentagen-DSR</a></li>
                     <li><a href="4.html">4.Para-AS</a></li>
-		    <li class="active"><a href="5.html">5.Husbol</a></li>
+		    <li class="active"><a href="5.html">5.Isabowl</a></li>
+		    <li><a href="6.html">6.G-calci</a></li>
                   </ul>
                 </li>
               </ul>
@@ -76,7 +77,7 @@
     <!-- Carousel
     ================================================== -->
     <div class="pro">
-<div class="prop"><p class="main">HUSBOL</p><p>COMING SOON</p></div>
+<div class="prop"><p class="main">ISABOWL</p><p>COMING SOON</p></div>
 
     </div><!-- /.carousel -->
 <div class="container marketing">
