--- a/main/bverma.html
+++ b/main/bverma.html
@@ -62,7 +62,8 @@
 		    <li><a href="2.html">2.Codlee</a></li>
                     <li><a href="3.html">3.Pentagen-DSR</a></li>
                     <li><a href="4.html">4.Para-AS</a></li>
-		    <li><a href="5.html">5.Husbol</a></li>
+		    <li><a href="5.html">5.Isabowl</a></li>
+		    <li><a href="6.html">6.G-calci</a></li>
                   </ul>
                 </li>
               </ul>
@@ -76,7 +77,7 @@
     <!-- Carousel
     ================================================== -->
     <div class="bh">
-<div class="bhp"><img src="../fonts/3.jpg"  alt="B.Verma" align="left"><p class="main">BABITA VERMA</p><p>She is born on 19 march 1987 in jaunpur(u.p) India and completed her schooling from jaunpur after that she had completed her b.pharma from u.p.t.u (lucknow). She has 4 year experience of pharma marketing as a medical representative.
+<div class="bhp"><!--<img src="../fonts/3.jpg"  alt="B.Verma" align="left">--><p class="main">BABITA VERMA</p><p>She is born on 19 march 1987 in jaunpur(u.p) India and completed her schooling from jaunpur after that she had completed her b.pharma from u.p.t.u (lucknow). She has 4 year experience of pharma marketing as a medical representative.
 </p></div>
     </div><!-- /.carousel -->
 <div class="container marketing">
