--- a/main/customer.html
+++ b/main/customer.html
@@ -62,7 +62,8 @@
 		    <li><a href="2.html">2.Codlee</a></li>
                     <li><a href="3.html">3.Pentagen-DSR</a></li>
                     <li><a href="4.html">4.Para-AS</a></li>
-		    <li><a href="5.html">5.Husbol</a></li>
+		    <li><a href="5.html">5.Isabowl</a></li>
+		    <li><a href="6.html">6.G-calci</a></li>
                   </ul>
                 </li>
               </ul>
