--- a/main/2.html
+++ b/main/2.html
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="../index.html"><p class="name">GEORGIAN</p><p class="namea">PHARMACEUTICALS<p><p class="nameb">Hope Of Life</p></a>
+		<a class="navbar-brand" href="../index.html"><p class="name">G</p><p class="namea">EORGIAN</p><p class="nameb">PHARMACEUTICALS</p><p class="namec">Hope Of Life</p></a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
