--- a/main/about.html
+++ b/main/about.html
@@ -86,7 +86,7 @@
     <!-- Carousel
     ================================================== -->
     <div class="about">
-<div class="aboutp"><p class="main">ABOUT US</p><p>Georgian is the very famous word for health care sector , doctors of k.g.m.c  known as georgian becuase of it's name king george medical college.They provoid their services   to the patient. they are known for the patient as god, as hope of life to cure the desease. georgian pharmaceuticals founded by <a href="bhzaidi.html">Syed Baharul Hasnain Zaidi</a> along with <a href="anaved.html">Mr. Ahmad Naved</a>, <a href="ssantra.html">Mr. Sowmen Santra</a> and <a href="bverma.html">Miss Babita Verma</a> in 2014 for hope of life to cure desease by the dedication of all the four person georgian pharmaceuticals established.
+<div class="aboutp"><p class="main">ABOUT US</p><p>Georgian is the very famous word for health care sector , doctors of K.G.M.C. known as Georgian becuase of it's name king george medical college. They provoide their services to the patients. They are known for the patients as God, as hope of life to cure the disease. Georgian pharmaceuticals founded by <a href="bhzaidi.html">Syed Baharul Hasnain Zaidi</a> along with <a href="anaved.html">Mr. Ahmad Naved</a>, <a href="ssantra.html">Mr. Sowmen Santra</a> and <a href="bverma.html">Ms. Babita Verma</a> in 2014 for hope of life to cure desease by the dedication of all the four person georgian pharmaceuticals established.
 </p></div>
     </div><!-- /.carousel -->
 <div class="container marketing">
@@ -95,12 +95,12 @@
         <div class="col-lg-4">
           <a href="feedback.html"><img class="img-circle" src="../fonts/26.jpg" alt="feedback" style="width: 140px; height: 140px;"></a>
           <h2>Feedback</h2>
-          <p>Your FEEDBACK is important for us. So please give your feedback and help us.</p>
+          <p>Your FEEDBACK is important to us. So please give your feedback and help us.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <a href="customer.html"><img class="img-circle" src="../fonts/18.jpg" alt="Customer" style="width: 140px; height: 140px;"></a>
           <h2>Customer</h2>
-          <p>We do everything for you. Give us a chance, we give you a life.</p>
+          <p>We will do everything for you. Give us a chance, we give you a life.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <a href="employee.html"><img class="img-circle" src="../fonts/19.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;"></a>
