--- a/main/bhzaidi.html
+++ b/main/bhzaidi.html
@@ -86,7 +86,7 @@
     <!-- Carousel
     ================================================== -->
     <div class="bh">
-<div class="bhp"><img src="../fonts/1.jpg"  alt="S.B.H.Zaidi" align="left"><p class="main">SYED BAHARUL HASNAIN ZAIDI</p><p>He is born on 1 july 1985 in bareilly(u.p) India and completed his schooling from bareilly after that he had completed his b.pharma from u.p.t.u (lucknow). He has 3 year experience of pharma marketing as a medical representative.
+<div class="bhp"><img src="../fonts/1.jpg"  alt="S.B.H.Zaidi" align="left"><p class="main">SYED BAHARUL HASNAIN ZAIDI</p><p>He is born on 1 july 1985 in bareilly(u.p) India and completed his schooling from Bareilly after that he had completed his B.Pharma from U.P.T.U (Lucknow). He has 3 year experience of pharma marketing as a medical representative.
 </p></div>
     </div><!-- /.carousel -->
 <div class="container marketing">
