--- a/main/vision.html
+++ b/main/vision.html
@@ -86,7 +86,7 @@
     <!-- Carousel
     ================================================== -->
     <div class="vision">
-<div class="visionp"><p class="main">OUR VISION</p><p>Georgian pharmaceuticals gives hope of life by quality medicine with economic price.
+<div class="visionp"><p class="main">OUR VISION</p><p>Georgian pharmaceuticals gives hope of life by quality medicine at reasonable price.
 </p></div>
     </div><!-- /.carousel -->
 <div class="container marketing">
