--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="fonts/favicon.ico">
-
     <title>HOME:GEORGIAN</title>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-51811503-1', 'auto');
-  ga('send', 'pageview');
+      ga('create', 'UA-51811503-1', 'auto');
+      ga('send', 'pageview');
 
-</script>
+   </script>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
@@ -230,7 +229,7 @@
           <p>We do everything for you. Give us a chance, we give you a life.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <a href="main/employee.html"><img class="img-circle" src="fonts/19.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;"></a>
+          <a href="http://myphpapp-zaidi.rhcloud.com/index.php"><img class="img-circle" src="fonts/19.jpg" alt="Generic placeholder image" style="width: 140px; height: 140px;"></a>
           <h2>Employee</h2>
           <p>We are here because you are here.</p>
         </div><!-- /.col-lg-4 -->
