--- a/main/about.html
+++ b/main/about.html
@@ -85,7 +85,7 @@
     <!-- Carousel
     ================================================== -->
     <div class="about">
-<div class="aboutp"><p class="main">ABOUT US</p><p>Georgian is the very famous word for health care sector , doctors of K.G.M.C. known as Georgian becuase of it's name king george medical college. They provoide their services to the patients. They are known for the patients as God, as hope of life to cure the disease. Georgian pharmaceuticals founded by <a href="bhzaidi.html">Syed Baharul Hasnain Zaidi</a> along with <a href="anaved.html">Mr. Ahmad Naved</a>, <a href="ssantra.html">Mr. Sowmen Santra</a> and <a href="bverma.html">Ms. Babita Verma</a> in 2014 for hope of life to cure desease by the dedication of all the four person georgian pharmaceuticals established.
+<div class="aboutp"><p class="main">ABOUT US</p><p>Georgian is the very famous word for health care sector , doctors of K.G.M.C. known as Georgian becuase of it's name king george medical college. They provoide their services to the patients. They are known for the patients as God, as hope of life to cure the disease. Georgian pharmaceuticals founded by <a href="bhzaidi.html">Syed Baharul Hasnain Zaidi</a> along with <a href="anaved.html">Mr. Ahmad Naved</a> and <a href="ssantra.html">Mr. Sowmen Santra</a> in 2014 for hope of life to cure desease by the dedication of all the four person georgian pharmaceuticals established.
 </p></div>
     </div><!-- /.carousel -->
 <div class="container marketing">
