--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                   <ul class="dropdown-menu">
                     <li><a href="main/about.html">About us</a></li>
 		    <li><a href="main/vision.html">Our vision</a></li>
-                    <li><a href="main/bhzaidi.html">B.H.Zaidi</a></li>
+                    <!--<li><a href="main/bhzaidi.html">B.H.Zaidi</a></li>
                     <li><a href="main/anaved.html">A.Naved</a></li>
-		    <li><a href="main/ssantra.html">S.Santra</a></li>
+		    <li><a href="main/ssantra.html">S.Santra</a></li>-->
                   </ul>
                 </li>
 		<li class="dropdown">
