--- a/main/about.html
+++ b/main/about.html
@@ -58,9 +58,9 @@
                   <ul class="dropdown-menu">
                     <li class="active"><a href="about.html">About us</a></li>
 		    <li><a href="vision.html">Our vision</a></li>
-                    <li><a href="bhzaidi.html">B.H.Zaidi</a></li>
+<!--                    <li><a href="bhzaidi.html">B.H.Zaidi</a></li>
                     <li><a href="anaved.html">A.Naved</a></li>
-		    <li><a href="ssantra.html">S.Santra</a></li>
+		    <li><a href="ssantra.html">S.Santra</a></li>-->
                   </ul>
                 </li>
 		<li class="dropdown">
@@ -85,7 +85,7 @@
     <!-- Carousel
     ================================================== -->
     <div class="about">
-<div class="aboutp"><p class="main">ABOUT US</p><p>The concept of Georgian Pharmaceuticals basically came when we saw that many people left their treatment due to high cost of their treatment. Some time left their treatment due to expensive cost of medicines.  Our main objective is to provided economic therapy to the poor patients of the world. Georgian pharmaceuticals founded by <a href="bhzaidi.html">Syed Baharul Hasnain Zaidi</a> along with <a href="anaved.html">Mr. Ahmad Naved</a> and <a href="ssantra.html">Mr. Sowmen Santra</a> in 2014 for hope of life to cure desease by the dedication of all the three person georgian pharmaceuticals established.
+<div class="aboutp"><p class="main">ABOUT US</p><p>The concept of Georgian Pharmaceuticals basically came when we saw that many people left their treatment due to high cost of their treatment. Some time left their treatment due to expensive cost of medicines.  Our main objective is to provided economic therapy to the poor patients of the world. Georgian pharmaceuticals founded in 2014 for hope of life to cure desease by the dedication of all the team georgian pharmaceuticals established.
 </p></div>
     </div><!-- /.carousel -->
 <div class="container marketing">
