--- a/main/anaved.html
+++ b/main/anaved.html
@@ -37,7 +37,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
-    <div class="navbar-wrapper">
+    <!--<div class="navbar-wrapper">
       <div class="container">
         <div class="navbar navbar-inverse navbar-static-top" role="navigation">
           <div class="container">
@@ -76,15 +76,15 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
 
 
     <!-- Carousel
     ================================================== -->
-    <div class="bh">
+    <!--<div class="bh">
 <div class="bhp"><img src="../fonts/2.jpg"  alt="A.Naved" align="left"><p class="main">AHMAD NAVED</p><p>He is born on 27 june 1983 in gorakhpur(u.p) India and completed his schooling from gorakhpur after that he had completed his b.pharma from u.p.t.u (lucknow). He has 6 year experience of pharma marketing as a medical representative .
 </p></div>
-    </div><!-- /.carousel -->
+    </div>--><!-- /.carousel -->
 <div class="container marketing">
       <!-- Three columns of text below the carousel -->
       <div class="row">
